--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-```html
 <!doctype html>
 <html lang="ko">
 <head>
@@ -177,248 +176,8 @@
     <section class="hero">
       <h1>업무용 툴킷</h1>
       <p>
-        로그인 후, 북마크 / IT 뉴스 / 빅스톤을 실행한다.
-        데이터는 Firebase(Cloud Firestore)에 저장되는 전제로 설계한다.
-      </p>
-    </section>
-
-    <div class="authbar" id="authBar">
-      <div class="user">
-        <img class="avatar" id="avatar" alt="" src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='34' height='34'%3E%3Crect width='100%25' height='100%25' rx='17' fill='%23cccccc'/%3E%3C/svg%3E">
-        <div class="user-info">
-          <div class="u1" id="userName">로그인이 필요함</div>
-          <div class="u2" id="userEmail">GitHub Pages + Firebase Auth</div>
-        </div>
-      </div>
-      <div class="meta">
-        <span class="chip" id="statusChip">상태: GUEST</span>
-        <span class="chip" id="envChip">배포: https://1sangit.github.io/sbl-toolkit/</span>
-      </div>
-    </div>
-
-    <div class="notice" id="notice">
-      <strong>접근 제어:</strong> eundang@gmail.com 계정만 사용하도록 제한되어 있다.<br/>
-      <strong>주의:</strong> 아래 설정이 완료되지 않으면 로그인 팝업이 차단되거나 오류가 발생할 수 있다.<br/>
-      - Firebase Auth의 Authorized domains에 <code>1sangit.github.io</code> 추가<br/>
-      - Firebase Web App config(firebaseConfig) 값 입력
-    </div>
-
-    <section class="grid" id="toolGrid">
-      <div class="card">
-        <div class="card-top">
-          <div class="badge">📚 북마크</div>
-          <div class="icon">🔖</div>
-        </div>
-        <h2>북마크 대시보드</h2>
-        <p>카테고리별 링크 등록/수정/삭제. 클릭 통계 기반 정렬.</p>
-        <div class="meta">
-          <span class="chip">DB: Firestore</span>
-          <span class="chip" id="bmCount">-</span>
-        </div>
-        <div class="card-actions">
-          <a class="action primary toolLink disabled" href="./bookmark/" rel="noopener">열기</a>
-          <a class="action toolLink disabled" href="./bookmark/" rel="noopener">관리</a>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="card-top">
-          <div class="badge">📰 IT 뉴스</div>
-          <div class="icon">🧠</div>
-        </div>
-        <h2>뉴스 리더</h2>
-        <p>RSS/키워드 뉴스 수집 및 읽기 흐름 관리.</p>
-        <div class="meta">
-          <span class="chip">DB: Firestore</span>
-          <span class="chip" id="newsCount">-</span>
-        </div>
-        <div class="card-actions">
-          <a class="action primary toolLink disabled" href="./it-news/" rel="noopener">열기</a>
-          <a class="action toolLink disabled" href="./it-news/" rel="noopener">관리
-```
-
-
-```html
-<!doctype html>
-<html lang="ko">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Second Brain Lab · 업무용 툴킷</title>
-
-  <style>
-    :root{
-      --bg:#0b1020; --bg2:#0f1730; --card:#0f1a33;
-      --text:#e9eefc; --muted:#b9c3e6; --line:rgba(255,255,255,.10);
-      --accent:#6ea8ff; --shadow:0 18px 60px rgba(0,0,0,.35); --r:18px;
-    }
-    [data-theme="light"]{
-      --bg:#f6f7fb; --bg2:#ffffff; --card:#ffffff;
-      --text:#101828; --muted:#667085; --line:rgba(16,24,40,.10);
-      --accent:#2563eb; --shadow:0 18px 60px rgba(16,24,40,.10);
-    }
-    *{box-sizing:border-box}
-    body{
-      margin:0;
-      font-family:-apple-system,BlinkMacSystemFont,"Segoe UI","Malgun Gothic",system-ui,sans-serif;
-      color:var(--text);
-      background:
-        radial-gradient(1200px 700px at 20% 10%, rgba(110,168,255,.22), transparent 60%),
-        radial-gradient(900px 600px at 85% 25%, rgba(167,139,250,.18), transparent 60%),
-        linear-gradient(180deg,var(--bg),var(--bg2));
-      min-height:100vh;
-    }
-    .wrap{max-width:1100px;margin:0 auto;padding:28px 18px 44px}
-    header{
-      display:flex;align-items:center;justify-content:space-between;gap:12px;
-      padding:14px 16px;border:1px solid var(--line);border-radius:var(--r);
-      background:rgba(255,255,255,.04);backdrop-filter:blur(10px);
-    }
-    [data-theme="light"] header{background:rgba(255,255,255,.85)}
-    .brand{display:flex;align-items:center;gap:10px;min-width:0}
-    .logo{
-      width:38px;height:38px;border-radius:12px;display:grid;place-items:center;
-      background:linear-gradient(135deg,rgba(110,168,255,.90),rgba(167,139,250,.70));
-      color:#fff;font-weight:900;letter-spacing:-.02em;box-shadow:0 10px 25px rgba(0,0,0,.20);
-      flex:0 0 auto;
-    }
-    .brand-title{display:flex;flex-direction:column;gap:2px;min-width:0}
-    .brand-title .t1{font-size:14px;font-weight:900;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
-    .brand-title .t2{font-size:12px;color:var(--muted);white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
-
-    .controls{display:flex;align-items:center;gap:10px;flex:0 0 auto;flex-wrap:wrap;justify-content:flex-end}
-    .btn{
-      border:1px solid var(--line);background:rgba(255,255,255,.06);color:var(--text);
-      padding:10px 12px;border-radius:12px;cursor:pointer;font-weight:900;font-size:13px;
-      transition:transform .12s ease,border-color .12s ease,background .12s ease;user-select:none;
-    }
-    [data-theme="light"] .btn{background:rgba(16,24,40,.03)}
-    .btn:hover{transform:translateY(-1px);border-color:rgba(110,168,255,.35)}
-    .btn:active{transform:translateY(0) scale(.99)}
-    .btn.primary{
-      background:linear-gradient(135deg,rgba(110,168,255,.88),rgba(37,99,235,.85));
-      border-color:rgba(110,168,255,.40);color:#fff;
-    }
-
-    .hero{
-      margin:22px 0 18px;padding:22px 18px;border-radius:var(--r);border:1px solid var(--line);
-      background:linear-gradient(180deg,rgba(255,255,255,.06),rgba(255,255,255,.02));
-    }
-    [data-theme="light"] .hero{background:linear-gradient(180deg,rgba(255,255,255,.95),rgba(255,255,255,.70))}
-    .hero h1{margin:0 0 8px;font-size:26px;letter-spacing:-.02em}
-    .hero p{margin:0;color:var(--muted);line-height:1.55;font-size:14px}
-
-    .authbar{
-      margin-top:14px;display:flex;align-items:center;justify-content:space-between;gap:12px;
-      padding:12px 14px;border:1px solid var(--line);border-radius:var(--r);
-      background:rgba(255,255,255,.04);
-    }
-    [data-theme="light"] .authbar{background:rgba(255,255,255,.85)}
-    .user{display:flex;align-items:center;gap:10px;min-width:0}
-    .avatar{
-      width:34px;height:34px;border-radius:50%;border:1px solid var(--line);background:rgba(255,255,255,.05);
-      object-fit:cover;
-    }
-    .user-info{display:flex;flex-direction:column;gap:2px;min-width:0}
-    .user-info .u1{font-size:13px;font-weight:900;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
-    .user-info .u2{font-size:12px;color:var(--muted);white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
-    .meta{display:flex;flex-wrap:wrap;gap:8px;justify-content:flex-end}
-    .chip{
-      border:1px solid var(--line);background:rgba(255,255,255,.04);
-      padding:6px 10px;border-radius:999px;font-size:12px;color:var(--muted);
-    }
-    [data-theme="light"] .chip{background:rgba(16,24,40,.03)}
-
-    .grid{display:grid;grid-template-columns:repeat(12,1fr);gap:14px;margin-top:14px}
-    .card{
-      grid-column:span 4;border:1px solid var(--line);border-radius:var(--r);
-      background:rgba(255,255,255,.05);padding:18px;box-shadow:var(--shadow);
-      position:relative;overflow:hidden;min-height:200px;
-      transition:transform .14s ease,border-color .14s ease;
-    }
-    [data-theme="light"] .card{background:#fff}
-    .card:hover{transform:translateY(-2px);border-color:rgba(110,168,255,.35)}
-    .card-top{display:flex;align-items:flex-start;justify-content:space-between;gap:10px}
-    .badge{
-      display:inline-flex;align-items:center;gap:8px;padding:8px 10px;border-radius:999px;
-      border:1px solid var(--line);background:rgba(255,255,255,.04);font-weight:900;font-size:12px;
-    }
-    [data-theme="light"] .badge{background:rgba(16,24,40,.03)}
-    .icon{
-      width:44px;height:44px;border-radius:14px;display:grid;place-items:center;
-      background:linear-gradient(135deg,rgba(110,168,255,.22),rgba(167,139,250,.18));
-      border:1px solid var(--line);font-size:22px;flex:0 0 auto;
-    }
-    .card h2{margin:14px 0 6px;font-size:18px;letter-spacing:-.01em}
-    .card p{margin:0;color:var(--muted);font-size:13px;line-height:1.55}
-    .card-actions{
-      position:absolute;left:18px;right:18px;bottom:16px;display:flex;gap:10px
-    }
-    a.action{
-      flex:1;text-decoration:none;display:inline-flex;justify-content:center;align-items:center;gap:8px;
-      padding:11px 12px;border-radius:14px;border:1px solid var(--line);
-      font-weight:900;font-size:13px;color:var(--text);background:rgba(255,255,255,.06);
-      transition:transform .12s ease,border-color .12s ease,background .12s ease;
-    }
-    [data-theme="light"] a.action{background:rgba(16,24,40,.03)}
-    a.action.primary{
-      background:linear-gradient(135deg,rgba(110,168,255,.88),rgba(37,99,235,.85));
-      border-color:rgba(110,168,255,.40);color:#fff;
-    }
-    a.action:hover{transform:translateY(-1px);border-color:rgba(110,168,255,.35)}
-    a.action:active{transform:translateY(0) scale(.99)}
-    .disabled{pointer-events:none;opacity:.55;filter:saturate(.7)}
-
-    footer{margin-top:16px;color:var(--muted);font-size:12px;text-align:center;padding:12px 0 0}
-
-    .notice{
-      margin-top:12px;
-      padding:12px 14px;
-      border:1px solid var(--line);
-      border-radius:var(--r);
-      background:rgba(255,255,255,.04);
-      color:var(--muted);
-      font-size:12px;
-      line-height:1.6;
-    }
-    [data-theme="light"] .notice{background:rgba(255,255,255,.85)}
-
-    @media (max-width:980px){.card{grid-column:span 6}}
-    @media (max-width:640px){
-      header{align-items:flex-start;flex-wrap:wrap}
-      .controls{width:100%}
-      .hero h1{font-size:22px}
-      .card{grid-column:span 12}
-      .authbar{flex-direction:column;align-items:stretch}
-      .meta{justify-content:flex-start}
-    }
-  </style>
-</head>
-
-<body>
-  <div class="wrap">
-    <header>
-      <div class="brand">
-        <div class="logo">SBL</div>
-        <div class="brand-title">
-          <div class="t1">Second Brain Lab</div>
-          <div class="t2">세컨드브레인연구소 · 업무용 툴킷</div>
-        </div>
-      </div>
-
-      <div class="controls">
-        <button class="btn" id="themeBtn" type="button">🌓 테마</button>
-        <button class="btn" id="refreshBtn" type="button">↻ 상태</button>
-        <button class="btn primary" id="loginBtn" type="button">Google 로그인</button>
-        <button class="btn" id="logoutBtn" type="button" style="display:none;">로그아웃</button>
-      </div>
-    </header>
-
-    <section class="hero">
-      <h1>업무용 툴킷</h1>
-      <p>
-        로그인 후, 북마크 / IT 뉴스 / 빅스톤을 실행한다.
-        데이터는 Firebase(Cloud Firestore)에 저장되는 전제로 설계한다.
+        로그인 후, 북마크 / IT 뉴스 / 트래커를 실행한다.
+        접근은 <code>eundang@gmail.com</code> 계정으로만 제한한다.
       </p>
     </section>
 
@@ -440,8 +199,7 @@
       <strong>접근 제어:</strong> <code>eundang@gmail.com</code> 계정만 사용하도록 제한되어 있다.<br/>
       <strong>필수 설정:</strong><br/>
       1) Firebase Auth → Authorized domains에 <code>1sangit.github.io</code> 추가<br/>
-      2) 아래 코드의 <code>firebaseConfig</code>를 Firebase 콘솔 값으로 교체<br/>
-      3) Firestore Rules에서 허용 사용자 제한(권장)
+      2) 아래 코드의 <code>firebaseConfig</code>를 Firebase 콘솔 값으로 교체
     </div>
 
     <section class="grid" id="toolGrid">
@@ -453,7 +211,7 @@
         <h2>북마크 대시보드</h2>
         <p>카테고리별 링크 등록/수정/삭제. 클릭 통계 기반 정렬.</p>
         <div class="meta">
-          <span class="chip">DB: Firestore</span>
+          <span class="chip">경로: <code>/bookmark/</code></span>
           <span class="chip" id="bmCount">-</span>
         </div>
         <div class="card-actions">
@@ -470,7 +228,7 @@
         <h2>뉴스 리더</h2>
         <p>RSS/키워드 뉴스 수집 및 읽기 흐름 관리.</p>
         <div class="meta">
-          <span class="chip">DB: Firestore</span>
+          <span class="chip">경로: <code>/it-news/</code></span>
           <span class="chip" id="newsCount">-</span>
         </div>
         <div class="card-actions">
@@ -481,18 +239,18 @@
 
       <div class="card">
         <div class="card-top">
-          <div class="badge">🗿 빅스톤</div>
-          <div class="icon">🎯</div>
+          <div class="badge">🧾 Tracker</div>
+          <div class="icon">📌</div>
         </div>
-        <h2>월별 목표</h2>
-        <p>월간 목표/할 일/리뷰를 한 곳에서 관리.</p>
+        <h2>IT 뉴스 인사이트 트래커</h2>
+        <p>뉴스 기록/태그/타임라인/클러스터. (현재: tracker/index.html)</p>
         <div class="meta">
-          <span class="chip">DB: Firestore</span>
-          <span class="chip" id="bsStatus">-</span>
+          <span class="chip">경로: <code>/tracker/</code></span>
+          <span class="chip" id="trackerStatus">-</span>
         </div>
         <div class="card-actions">
-          <a class="action primary toolLink disabled" href="./bigstone/" rel="noopener">열기</a>
-          <a class="action toolLink disabled" href="./bigstone/" rel="noopener">관리</a>
+          <a class="action primary toolLink disabled" href="./tracker/" rel="noopener">열기</a>
+          <a class="action toolLink disabled" href="./tracker/" rel="noopener">관리</a>
         </div>
       </div>
     </section>
@@ -533,13 +291,6 @@
       signOut,
       onAuthStateChanged
     } from "https://www.gstatic.com/firebasejs/10.12.4/firebase-auth.js";
-    import {
-      getFirestore,
-      collection,
-      getCountFromServer,
-      doc,
-      getDoc
-    } from "https://www.gstatic.com/firebasejs/10.12.4/firebase-firestore.js";
 
     // =====================
     // Firebase config (여기 교체)
@@ -559,7 +310,6 @@
     // =====================
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
-    const db = getFirestore(app);
 
     // =====================
     // UI handles
@@ -576,7 +326,7 @@
     const toolLinks = Array.from(document.querySelectorAll(".toolLink"));
     const bmCount = document.getElementById("bmCount");
     const newsCount = document.getElementById("newsCount");
-    const bsStatus = document.getElementById("bsStatus");
+    const trackerStatus = document.getElementById("trackerStatus");
 
     // Allowed email (single-user hard limit)
     const ALLOWED_EMAIL = "eundang@gmail.com";
@@ -594,10 +344,16 @@
       }
     }
 
-    function resetCounts(){
+    function resetBadges(){
       bmCount.textContent = "-";
       newsCount.textContent = "-";
-      bsStatus.textContent = "-";
+      trackerStatus.textContent = "-";
+    }
+
+    function setBadgesLoggedIn(){
+      bmCount.textContent = "상태: READY";
+      newsCount.textContent = "상태: READY";
+      trackerStatus.textContent = "상태: READY";
     }
 
     // =====================
@@ -621,78 +377,29 @@
       catch (e) { alert(e?.message || String(e)); }
     });
 
-    // =====================
-    // Firestore: best-effort stats (optional)
-    // =====================
-    async function refreshDataForUser(uid){
-      // bookmarks count
-      try{
-        const snap = await getCountFromServer(collection(db, `users/${uid}/bookmarks`));
-        bmCount.textContent = `북마크: ${snap.data().count}`;
-      } catch {
-        bmCount.textContent = "북마크: (미설정)";
-      }
-
-      // itnews count
-      try{
-        const snap = await getCountFromServer(collection(db, `users/${uid}/itnews`));
-        newsCount.textContent = `아이템: ${snap.data().count}`;
-      } catch {
-        newsCount.textContent = "아이템: (미설정)";
-      }
-
-      // bigstone state (document)
-      try{
-        const stateRef = doc(db, `users/${uid}/bigstone/state`);
-        const stateSnap = await getDoc(stateRef);
-        if (stateSnap.exists()){
-          const s = stateSnap.data();
-          const month = s.month ? String(s.month) : "";
-          const title = s.title ? String(s.title) : "OK";
-          bsStatus.textContent = month ? `상태: ${month} · ${title}` : `상태: ${title}`;
-        } else {
-          bsStatus.textContent = "상태: (미설정)";
-        }
-      } catch {
-        bsStatus.textContent = "상태: (미설정)";
-      }
-    }
-
     refreshBtn.addEventListener("click", async () => {
       const u = auth.currentUser;
       if (!u) return;
-      await refreshDataForUser(u.uid);
+      // 지금은 “상태”만 갱신 (각 앱의 DB/구조가 다르기 때문)
+      setBadgesLoggedIn();
     });
 
-    // =====================
-    // Auth gate
-    // =====================
     async function ensureAllowed(user){
-      // Option A: hard-limit to one email (current)
-      if ((user.email || "").toLowerCase() !== ALLOWED_EMAIL) return false;
-
-      // Option B (future): Firestore whitelist doc check
-      // const ref = doc(db, `allowedUsers/${user.email}`);
-      // const snap = await getDoc(ref);
-      // return snap.exists();
-
-      return true;
+      return (user?.email || "").toLowerCase() === ALLOWED_EMAIL;
     }
 
     onAuthStateChanged(auth, async (user) => {
       if (!user){
-        // GUEST
         userName.textContent = "로그인이 필요함";
         userEmail.textContent = "Google 로그인 후 도구 사용 가능";
         statusChip.textContent = "상태: GUEST";
         loginBtn.style.display = "";
         logoutBtn.style.display = "none";
         setLinksEnabled(false);
-        resetCounts();
+        resetBadges();
         return;
       }
 
-      // Check allow-list
       const allowed = await ensureAllowed(user);
       if (!allowed){
         alert("접근 권한이 없습니다.");
@@ -700,7 +407,6 @@
         return;
       }
 
-      // LOGGED IN
       userName.textContent = user.displayName || "사용자";
       userEmail.textContent = user.email || "";
       statusChip.textContent = "상태: LOGGED IN";
@@ -710,9 +416,8 @@
       logoutBtn.style.display = "";
       setLinksEnabled(true);
 
-      await refreshDataForUser(user.uid);
+      setBadgesLoggedIn();
     });
   </script>
 </body>
 </html>
-```
